# Verisaria-AI

./: .gitignore  README.md  pyproject.toml
docs/design/: dynamic-world-model.md  emergent-fact-ledger.md  pack-authoring-guide.md  tui-design.md  worldclock-and-weather.md
docs/guides/: CONTENT_GUIDE.md
docs/planning/: HANDOVER.md  PROGRESS.md  dynamic-prereq-test-task.md  escort-moved-validation-task.md  escort-validation-task.md  grand-integration-pack-task.md  playability-audit-task.md  prereq-convergence-test-task.md  test-agent-handoff.md  worldclock-weather-test-task.md
fixtures/content_packs/: escort_proving_ground.json  frostgate_watchpost.json
src/verisaria/engine/: appraisal.py  arbiter.py  campaign_loader.py  coherence.py  intent.py  llm.py  npc_dialogue.py  npc_runtime.py  persistence.py  response_generator.py  rules.py  schemas.py  world.py  worldclock.py
src/verisaria/frontends/: cli.py
src/verisaria/runtime/: session.py
tests/: test_agenda_cli_integration.py  test_arbiter.py  test_campaign_loader.py  test_channel_c_logging.py  test_coherence.py  test_dynamic_world_vars.py  test_engine_session.py  test_escort.py  test_fact_ledger_arbiter.py  test_intent.py  test_intent_parse_diagnostics.py  test_intent_reclassify.py  test_llm_error_recovery.py  test_npc_dialogue.py  test_pending_process.py  test_persistence.py  test_pipeline.py  test_player_stance.py  test_protocol.py  test_protocol_emission.py  test_relationship_appraisal.py  test_response_generator.py  test_rules.py  test_tui_app.py  test_tui_render.py  test_world_state.py  test_worldclock.py
(+4 files in other folders)
